fixed add button alignment

--- a/src/app/components/bottom-menu/bottom-menu.component.scss
+++ b/src/app/components/bottom-menu/bottom-menu.component.scss
@@ -18,6 +18,6 @@ button {
 
 img {
   height: 65%;
-  opacity: 0.85;
+  opacity: 0.75;
   padding-bottom: 0.4rem;
 }
