--- a/src/app/screens/hosted-events/hosted-events.component.scss
+++ b/src/app/screens/hosted-events/hosted-events.component.scss
@@ -8,6 +8,7 @@
   width: 7rem;
   height: 7rem;
   font-size: 6rem;
+  display: flex;
 }
 
 .add-symbol {
